Integrate ExtendedAE
- Port Entro material chain, crystal assembler/fixer, ingredient buffer, caner, machine frame, concurrent processor, quartz blend, and related recipes/resources under ae2 ids.
- Add crystal assembler/fixer recipe serializers, HEI categories, CraftTweaker hooks, models, screens, lang, and EAE-derived recipe behavior.
- Extend pattern provider/interface capacity and paging, add pattern expansion card, and merge extended pattern access terminal features with provider search, input/output search modes, provider highlighting, and shift-open provider GUI support.
- Add Pattern Modifier with standalone, provider-bound, embedded toolbox, Baubles/hotkey support, EAE-style buttons/layout, and pattern stack/duplicate handling improvements.
- Merge smart annihilation plane filtering/upgrades into the existing annihilation plane and add threshold level emitter, ME packing tape/package, and config modifier tooling.
- Improve void cell GUI/effects/config behavior while preserving existing partition semantics.
- Add OD/mod/precise/threshold bus variants and associated GUI/container/filter logic.
- Add Forge-annotated AEConfig options for extended interface/pattern-provider limits and related behavior.
- Update GUI schemas/screens, localization, item/block/part ids, model registration, recipe factories, and README integration notes.

Fix bugs