@@ -6,7 +6,7 @@ import mezz.jei.api.ingredients.VanillaTypes;
 import mezz.jei.api.recipe.IRecipeWrapper;
 import net.minecraft.item.ItemStack;
 
-import java.util.Arrays;
+import java.util.List;
 
 class StorageCellUpgradeRecipeWrapper implements IRecipeWrapper {
     private final StorageCellUpgradeRecipe recipe;
@@ -17,7 +17,7 @@ class StorageCellUpgradeRecipeWrapper implements IRecipeWrapper {
 
     @Override
     public void getIngredients(IIngredients ingredients) {
-        ingredients.setInputs(VanillaTypes.ITEM, Arrays.asList(
+        ingredients.setInputs(VanillaTypes.ITEM, List.of(
             new ItemStack(this.recipe.getInputCell()),
             new ItemStack(this.recipe.getInputComponent())));
         ingredients.setOutput(VanillaTypes.ITEM, new ItemStack(this.recipe.getResultCell()));
